compilerplugins/clang/test/staticvar.cxx
/* -*- Mode: C++; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4; fill-column: 100 -*- */
/*
 * This file is part of the LibreOffice project.
 *
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 */

struct S1
{
    int x, y;
};

S1 const& f()
{
    static S1 s1[]{
        { 1, 1 }
    }; // expected-error {{var should be static const, or whitelisted [loplugin:staticvar]}}
    return s1[0];
}

/* vim:set shiftwidth=4 softtabstop=4 expandtab cinoptions=b1,g0,N-s cinkeys+=0=break: */
